# DjongoProject

./: README.md  blog_entries_fixture.json  category_fixture.json  env.example  product_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blogentry_confirm_delete.html  blogentry_detail.html  blogentry_form.html  blogentry_list.html
blog/templates/blog/includes/: navbar.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_data.py  clear_db.py  create_db.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_product_status_and_more.py
catalog/templates/catalog/: base.html  categories.html  contacts.html  footer.html  home.html  navbar.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: navbar.html
config/: settings.py  urls.py
fixtures/: auth_group_fixture.json  blog_fixture.json  catalog_fixture.json
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: add_test_users.py  create_moderators_group.py  createadmin.py  createmoderator.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
